<resources>
    <!--Todo CAmbiar nombre de APP-->
    <!--Todo HAcer strings en inglés-->
    <string name="app_name">Mov-08-NervionPlayers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Alias</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_register">Registrase</string>
    <string name="error_invalid_email">El correo no es válido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es necesario</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para el
        proceso de autocompletar email."
    </string>
    <string name="nombreApi">https://cambiar.es</string>
    <string name="fichero">fjruiz.nervionplayers.fichero</string>
    <string name="alias">Alias</string>
    <string name="Password">Contraseña</string>
    <string name="Password2">Repite Contraseña</string>
    <string name="name">Nombre</string>
    <string name="subname">Apellidos</string>
    <string name="email">Correo</string>
    <string name="year">Curso</string>
    <string name="letter">Letra</string>
    <string name="image">Foto</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_alumno">AlumnoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="partidos_a_jugar">Partidos a jugar</string>
    <string name="nuevo_deporte">Nuevo Deporte</string>
    <string name="ver_grupos">Ver Grupos</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="partidos_anteriores">Partidos Anteriores</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
