<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_partidos"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/partidos_a_jugar" />
        <item
            android:id="@+id/nav_aniadir"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/nuevo_deporte" />
        <item
            android:id="@+id/nav_Grupos"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/ver_grupos" />
        <item
            android:id="@+id/nav_partidos_jugados"
            android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
            android:title="@string/partidos_anteriores" />
    </group>

    <item android:title="@string/opciones">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/editar_usuario" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/salir" />
        </menu>
    </item>

</menu>
